# Proyecto1_Paralela

./: CMakeLists.txt  README.md
include/: config.hpp  ink.hpp  model.hpp  render_sdl.hpp  rng.hpp  shading.hpp  waves.hpp
logs/: pruebas.py  results_suiteA.csv  suiteA_speedup_eficiencia.csv
src/: ink.cpp  ink_parallel.cpp  main.cpp  main_parallel.cpp  model_parallel.cpp  model_seq.cpp  render_sdl.cpp  shading.cpp  shading_parallel.cpp  waves.cpp
